# minimal-qt5

./: CMakeLists.txt  main.cpp  myobject.cpp  myobject.h
